# renode-rv32-playground

./: LICENSE  README.md
rust/: Cargo.toml  Justfile  connect.gdb  memory.x  renode.sh
rust/.cargo/: config.toml
rust/common/: Cargo.toml
rust/common/src/: core_level_interruptor.rs  lib.rs  println.rs
rust/interrupts-playground/: Cargo.toml
rust/interrupts-playground/asm/: ivt.S  setup_interrupts.S
rust/interrupts-playground/examples/: interrupts.rs  print_isa.rs
rust/interrupts-playground/src/: asm.rs  handlers.rs  main.rs
rust/tap-test/: Cargo.toml
rust/tap-test/examples/: mhartid.rs
rust/tap-test/src/: main.rs
scripts/: README.md  setup-uart.resc  start-rv32imac.resc  start.resc
