[package]
name = "interrupts-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.1"
uart_16550 = {version = "0.2.17", default-features = false, features = ["stable"]}
common = {path="../common"}