[package]
name = "interrupts-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = {workspace = true}
riscv-rt = {workspace = true}
uart_16550 = {version = "0.2.17", default-features = false, features = ["stable"]}
common = {path="../common"}
embedded-hal = "0.2.7"
bitvec = { version = "^1.0", default-features = false, features = ["atomic"] }
heapless = "0.7.10"
plic = { git = "https://github.com/luojia65/plic" }
