[package]
name = "tap-nostd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
riscv = "0.8.0"
riscv-rt = "0.8.1"
testanything = {path = "../../../tap-rust/", default-features = false, features = ["alloc"]}

